Revised placeholder Lorem Ipsum text in Overview section

--- a/index.html
+++ b/index.html
@@ -466,16 +466,16 @@
                 <div class="col-12 col-md-6 overview">
 					<h1>Overview</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur	id mattis ante, vitae mattis risus. Vivamus eget nisl eget nisi	gravida facilisis scelerisque a augue. Duis sit amet lorem diam.
-						Aliquam vulputate lacinia est.
+						Wembley Park, the home of Football, in undergoing a transformation.  The land surrounding the iconomic stadium is becoming a new home for London and a retail and cultural destination for its visitors.
 						<br />
 						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
+                        This website will provides Benchmark information in the on-going development of the Park.  Currently there are three Projects which have either been completed or are under-going construction.
 						<br />
 						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
-                    </p>
-
+                        This Overview page combines key metrics on programme and cost from each of the projects, to enable users to see metrics side-by-side.  Each project page provides further breakdown of these metrics, as well as a Gallery of project images.
+                        <br />
+						<br />
+                        (Information on this page and the following is fictional and, other than the the names Quintain and Wembley Park, all information is fictional for the purposes of the Project.)
                         <!-- Timeline Button -->
 
 						<div class="center-timeline">
