--- a/project1.html
+++ b/project1.html
@@ -459,13 +459,13 @@
 					<h1>Project Overview</h1>
 					<p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat eros a vestibulum ornare. Vivamus vehicula, nibh ac sagittis euismod, dolor tellus eleifend nisi, vitae tincidunt sapien dolor vitae urna. Curabitur pellentesque vulputate velit id laoreet. Sed lacinia sodales sapien vel interdum. Maecenas efficitur commodo orci quis pharetra.
+						The debut project at the Park is a development of three buildings, focused on providing homes for young professionals and couples.  As well as studios and ensuites, two and three bed apartments are designed to provide equally sized bedrooms with ensuites for sharers.
                         <br>
                         <br>
-                        Nunc porta facilisis nibh ac efficitur. In eu orci id nibh imperdiet bibendum. Duis tristique velit eu elit ultrices vestibulum in ac magna. Fusce ornare faucibus mattis. Aenean vel massa ligula. Pellentesque euismod, dui in tristique imperdiet, ipsum arcu posuere nulla, nec dictum ante sem vitae arcu. Mauris elementum orci ligula.
+                        The buildings are designed with enhanced sustainability credentials.  The thermal performance exceeds building control requirements to lower heating costs for residents.  The buildings provide heating and hot water from a combined heating and power plantroom.  There are also solar panels on roofs.
 						<br />
 						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
+                        Residents, as well as each apartment having their own balcony, have access to ample communal roof-top facilities for outdoor leisure.  There is communal internal amenity at ground level, providing residents with access to reading rooms, cinema, working space and fitness rooms.
                     </p>
 
                         <!-- Timeline Button -->
