--- a/project2.html
+++ b/project2.html
@@ -458,13 +458,13 @@
 				<div class="col-12 col-md-6 overview">
 					<h1>Project Overview</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat eros a vestibulum ornare. Vivamus vehicula, nibh ac sagittis euismod, dolor tellus eleifend nisi, vitae tincidunt sapien dolor vitae urna. Curabitur pellentesque vulputate velit id laoreet. Sed lacinia sodales sapien vel interdum. Maecenas efficitur commodo orci quis pharetra.
+						Project 2 aspires to be a home for families.  There are four buildings centred around a podium.  The buildings are designed to be cost effective to delvier affordable accommodation.  One of the buildings is leased by an RSL to delivery social rent accommodation.  
                         <br>
                         <br>
-                        Nunc porta facilisis nibh ac efficitur. In eu orci id nibh imperdiet bibendum. Duis tristique velit eu elit ultrices vestibulum in ac magna. Fusce ornare faucibus mattis. Aenean vel massa ligula. Pellentesque euismod, dui in tristique imperdiet, ipsum arcu posuere nulla, nec dictum ante sem vitae arcu. Mauris elementum orci ligula.
+                        Whilst only 50% of apartments have balconies, those apartments without have additional internal space to compensate.  The extensive podium is design to be family friendly, providing a safe and secure environment for children with ample play facilities.  The intent is to provide the most family-friendly environment possible.
 						<br />
 						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
+                        Beneath the podium, there are 200 parking spaces and retail facilities.  The retail strategy is centred around providing further family-friendly facilities, including a nursery.  
                     </p>
 
                         <!-- Timeline Button -->
