--- a/project3.html
+++ b/project3.html
@@ -460,13 +460,13 @@
 					<h1>Project Overview</h1>
 					<p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat eros a vestibulum ornare. Vivamus vehicula, nibh ac sagittis euismod, dolor tellus eleifend nisi, vitae tincidunt sapien dolor vitae urna. Curabitur pellentesque vulputate velit id laoreet. Sed lacinia sodales sapien vel interdum. Maecenas efficitur commodo orci quis pharetra.
+						Project 3 is the latest and premium focused product offerring, they feature a high-end fit-out of apartments and amenity space.  Two high-rise buildings offer panoramic views of the Park, Stadium and to Central London.  This product compliments Project 1 and 2, and provides an aspirational setting to move to, from the young couple climbing the career ladder, or a new home for parents to move to after the children move out.
                         <br>
                         <br>
-                        Nunc porta facilisis nibh ac efficitur. In eu orci id nibh imperdiet bibendum. Duis tristique velit eu elit ultrices vestibulum in ac magna. Fusce ornare faucibus mattis. Aenean vel massa ligula. Pellentesque euismod, dui in tristique imperdiet, ipsum arcu posuere nulla, nec dictum ante sem vitae arcu. Mauris elementum orci ligula.
+                        Apartments are over-sized and designed with luxury kitchen and bathrooms. All apartments will have large balconies or terraces.  In addition, 50% of the apartments have comfort cooling.
 						<br />
 						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
+                        Amenity facilities are design with a private members club ethos, with concierge and catering facilities for residents and non-residents.  Spaces include spa facilities, as well as dining rooms, reading spaces and bar.
                     </p>
 
                         <!-- Timeline Button -->
