--- a/project2.html
+++ b/project2.html
@@ -15,18 +15,17 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-        
+
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
 
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-    <!-- Google Chart - Pie Chart - Start -->
+	<!-- Google Chart - Pie Chart - Start -->
 
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script type="text/javascript">
-
 		google.charts.load("current", { packages: ["corechart"] });
         google.charts.setOnLoadCallback(drawChart);
 
@@ -69,9 +68,9 @@
       }
 	</script>
 
-    <!-- Google Chart - Pie Chart - End -->
+	<!-- Google Chart - Pie Chart - End -->
 
-    <!-- Google Chart - Timeline - Start -->
+	<!-- Google Chart - Timeline - Start -->
 
 	<script type="text/javascript">
 		google.charts.load("current", {packages:["timeline"]});
@@ -111,13 +110,12 @@
         }
 	</script>
 
-    <!-- Google Chart - Timeline - End -->
+	<!-- Google Chart - Timeline - End -->
 
-    <!-- Map Script and Formatting - Start -->
+	<!-- Map Script and Formatting - Start -->
 
-    <script>
-
-        var labels = '123456789';
+	<script>
+		var labels = '123456789';
         var labelIndex = 0;
 
         function initMap() {
@@ -340,13 +338,13 @@
 
         }
 
-    </script>
+	</script>
 
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVpHLcJ-9sjMpQu5v_RI_BRk1OGEU2RpA&callback=initMap">
-    </script>
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVpHLcJ-9sjMpQu5v_RI_BRk1OGEU2RpA&callback=initMap">
+	</script>
 
-    <!-- Map Script and Formatting - End -->
+	<!-- Map Script and Formatting - End -->
 
 	<title>WP - Project 2</title>
 
@@ -354,75 +352,75 @@
 
 <body>
 
-<!-- Logo Banner - Start -->
+	<!-- Logo Banner - Start -->
 
 	<header>
 		<div class="container-fluid container-logo no-gutters">
 			<div class="row justify-content-center banner-logo no-gutters">
 				<div class="col-12 col-md-6 logo-quintain justify-content-center">
-                    <img src="assets/images/logo-quintain.png" alt="Quintain Logo">
+					<img src="assets/images/logo-quintain.png" alt="Quintain Logo">
                 </div>
-				<div class="col-12 col-md logo-wp no-gutters justify-content-center">
-                    <img src="assets/images/logo-wp.jpg" alt="Wembley Park Logo">
+					<div class="col-12 col-md logo-wp no-gutters justify-content-center">
+						<img src="assets/images/logo-wp.jpg" alt="Wembley Park Logo">
                 </div>
-			</div>
-		</div>
+					</div>
+				</div>
 
-<!-- Logo Banner - End -->
+				<!-- Logo Banner - End -->
 
-<!-- Navbar - Large Screen - Start -->
+				<!-- Navbar - Large Screen - Start -->
 
-		<div class="container-fluid d-none d-sm-none d-md-block no-gutters">
-			<nav class="row navbar no-gutters">
-				<div class="col no gutters">
-					<ul id="nav" class="list-inline menucontainer">
-						<li class="col-md-3 list-inline-item menuitem menuitem-noimage">
-							<a href="index.html">Overview</a>
-						</li>
+				<div class="container-fluid d-none d-sm-none d-md-block no-gutters">
+					<nav class="row navbar no-gutters">
+						<div class="col no gutters">
+							<ul id="nav" class="list-inline menucontainer">
+								<li class="col-md-3 list-inline-item menuitem menuitem-noimage">
+									<a href="index.html">Overview</a>
+								</li>
 
-						<li class="col-md-3 list-inline-item menuitem">
-							<a href="project1.html">Project 1
-							<img
+								<li class="col-md-3 list-inline-item menuitem">
+									<a href="project1.html">Project 1
+										<img
                             src="assets/images/P1_thumb.png"
                             alt="Project 1 Image"
                             height="150"
                             class="menuitem-project1"/>
                         </a>
-                        </li>
+								</li>
 
-						<li class="col-md-3 list-inline-item menuitem active">
-							<a href="project2.html">Project 2
-							<img
+								<li class="col-md-3 list-inline-item menuitem active">
+									<a href="project2.html">Project 2
+										<img
                                 src="assets/images/P2_thumb.png"
                                 alt="Project 2 Image"
                                 height="150"
                                 class="menuitem-project1"/>
                             </a>
-                            </li>
+								</li>
 
-						<li class="col-md-3 list-inline-item menuitem">
-							<a href="project3.html">Project 3
-							<img
+								<li class="col-md-3 list-inline-item menuitem">
+									<a href="project3.html">Project 3
+										<img
                                 src="assets/images/P3_thumb.png"
                                 alt="Project 3 Image"
                                 height="150"
                                 class="menuitem-project1"/>
                             </a>
-                            </li>
-					</ul>
+								</li>
+							</ul>
+						</div>
+					</nav>
 				</div>
-			</nav>
-		</div>
 
-<!-- Navbar - Large Screen - End -->
+				<!-- Navbar - Large Screen - End -->
 
-<!-- Navbar - Small Screen - Start -->
+				<!-- Navbar - Small Screen - Start -->
 
-		<div class="container-fluid d-md-none">
-			<div class="row">
-				<div class="col-12 no-gutters">
-					<div class="dropdown">
-						<button
+				<div class="container-fluid d-md-none">
+					<div class="row">
+						<div class="col-12 no-gutters">
+							<div class="dropdown">
+								<button
                             class="btn btn-nav dropdown-toggle btn-block"
                             type="button"
                             id="dropdownMenuButton"
@@ -431,43 +429,45 @@
                             aria-expanded="false">
                                 Menu
                         </button>
-						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-							<a class="dropdown-item" href="index.html">Overview</a>
-							<a class="dropdown-item" href="project1.html">Project 1</a>
-							<a class="dropdown-item" href="project2.html">Project 2</a>
-							<a class="dropdown-item" href="project3.html">Project 3</a>
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+									<a class="dropdown-item" href="index.html">Overview</a>
+									<a class="dropdown-item" href="project1.html">Project 1</a>
+									<a class="dropdown-item" href="project2.html">Project 2</a>
+									<a class="dropdown-item" href="project3.html">Project 3</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
 
-<!-- Navbar - Small Screen - End -->
+				<!-- Navbar - Small Screen - End -->
 
 	</header>
 
 	<section>
 
-<!-- Main Section - Start -->
+		<!-- Main Section - Start -->
 
 		<div class="container no-gutters">
 			<div class="row no-gutters">
 
-                <!-- Overview Section - Start -->
-            
+				<!-- Overview Section - Start -->
+
 				<div class="col-12 col-md-6 overview">
 					<h1>Project Overview</h1>
 					<p>
-						Project 2 aspires to be a home for families.  There are four buildings centred around a podium.  The buildings are designed to be cost effective to delvier affordable accommodation.  One of the buildings is leased by an RSL to delivery social rent accommodation.  
-                        <br>
-                        <br>
+						Project 2 aspires to be a home for families. There are four buildings centred around a podium.
+						The buildings are designed to be cost effective to delvier affordable accommodation. One of the
+						buildings is leased by an RSL to delivery social rent accommodation.
+						<br>
+						<br>
                         Whilst only 50% of apartments have balconies, those apartments without have additional internal space to compensate.  The extensive podium is design to be family friendly, providing a safe and secure environment for children with ample play facilities.  The intent is to provide the most family-friendly environment possible.
 						<br />
 						<br />
-                        Beneath the podium, there are 200 parking spaces and retail facilities.  The retail strategy is centred around providing further family-friendly facilities, including a nursery.  
+                        Beneath the podium, there are 200 parking spaces and retail facilities.  The retail strategy is centred around providing further family-friendly facilities, including a nursery.
                     </p>
 
-                        <!-- Timeline Button -->
+						<!-- Timeline Button -->
 
 						<div class="center-timeline">
 							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-timeline-modal-lg">
@@ -495,23 +495,23 @@
 						</div>
 				</div>
 
-                <!-- Overview Section - End -->
+				<!-- Overview Section - End -->
 
-                <!-- Chart Section - Start -->
+				<!-- Chart Section - Start -->
 
 				<div class="col-12 col-md-6 justify-content-center chartbox">
 					<h1>Cost Breakdown (£/sqft)</h1>
 					<div id="piechart" style="width: 90%; height: 90%;" class="chart"></div>
 				</div>
 
-                <!-- Chart Section - End -->
+				<!-- Chart Section - End -->
 
 			</div>
 		</div>
 
-<!-- Main Section - End -->
+		<!-- Main Section - End -->
 
-<!-- Gallery Section - Start -->
+		<!-- Gallery Section - Start -->
 
 		<div class="gallery">
 
@@ -531,42 +531,44 @@
 						<div class="carousel-item active">
 							<img src="assets/images/P2_Ext-1-min.jpg" class="d-block w-100" alt="Image 1" />
                         </div>
-						<div class="carousel-item">
-							<img src="assets/images/P2_Ext-2-min.jpg" class="d-block w-100" alt="Image 2" />
+							<div class="carousel-item">
+								<img src="assets/images/P2_Ext-2-min.jpg" class="d-block w-100" alt="Image 2" />
                         </div>
-						<div class="carousel-item">
-							<img src="assets/images/P2_Ext-3-min.jpg" class="d-block w-100" alt="Image 3" />
+								<div class="carousel-item">
+									<img src="assets/images/P2_Ext-3-min.jpg" class="d-block w-100" alt="Image 3" />
                         </div>
-						<div class="carousel-item">
-						    <img src="assets/images/P2_Int-1-min.jpg" class="d-block w-100" alt="Image 4" />
+									<div class="carousel-item">
+										<img src="assets/images/P2_Int-1-min.jpg" class="d-block w-100" alt="Image 4" />
                         </div>
-						<div class="carousel-item">
-							<img src="assets/images/P2_Int-2-min.jpg" class="d-block w-100" alt="Image 5" />
+										<div class="carousel-item">
+											<img src="assets/images/P2_Int-2-min.jpg" class="d-block w-100" alt="Image 5" />
                         </div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselGalleryIndicators" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselGalleryIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</div>
-		</div>
+										</div>
+										<a class="carousel-control-prev" href="#carouselGalleryIndicators" role="button"
+											data-slide="prev">
+											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselGalleryIndicators" role="button"
+											data-slide="next">
+											<span class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Next</span>
+										</a>
+									</div>
+								</div>
+							</div>
 
-<!-- Gallery Section - End -->
+							<!-- Gallery Section - End -->
 
 	</section>
 
 	<footer>
 
 		<div class="container-fluid footer-container">
-	
+
 			<div class="row justify-content-center footerrow">
-	
-<!-- Footer - Map Button - Start -->
+
+				<!-- Footer - Map Button - Start -->
 
 				<div class="col-4 footer-col-map">
 					<button class="btn btn-map btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
@@ -574,9 +576,9 @@
 	                </button>
 				</div>
 
-<!-- Footer - Map Button - End -->
+				<!-- Footer - Map Button - End -->
 
-<!-- Footer - Weblinks - Start -->
+				<!-- Footer - Weblinks - Start -->
 
 				<div class="col-4 footer-col-web">
 					<p>Websites:</p>
@@ -588,9 +590,9 @@
 	                </a>
 				</div>
 
-<!-- Footer - Weblinks - End -->
+				<!-- Footer - Weblinks - End -->
 
-<!-- Footer - Map Dropdown - Start -->
+				<!-- Footer - Map Dropdown - Start -->
 
 				<div class="col-10">
 					<div class="collapse" id="collapseMap">
@@ -600,7 +602,7 @@
 					</div>
 				</div>
 
-<!-- Footer - Map Dropdown - End -->
+				<!-- Footer - Map Dropdown - End -->
 
 			</div>
 		</div>
