Add attributions for Charts and Maps to HTML

--- a/project2.html
+++ b/project2.html
@@ -36,6 +36,8 @@
 
     <!-- Google Chart - Pie Chart - Start -->
 
+        <!-- Utilises Google chart tools - https://developers.google.com/chart/ -->
+
     <script
       type="text/javascript"
       src="https://www.gstatic.com/charts/loader.js"
@@ -96,6 +98,8 @@
 
     <!-- Google Chart - Timeline - Start -->
 
+        <!-- Utilises Google chart tools - https://developers.google.com/chart/ -->
+
     <script type="text/javascript">
       google.charts.load("current", { packages: ["timeline"] });
       google.charts.setOnLoadCallback(drawChart);
@@ -151,6 +155,10 @@
     <!-- Google Chart - Timeline - End -->
 
     <!-- Map Script and Formatting - Start -->
+
+        <!-- Utilises Google Maps Javascript API - https://developers.google.com/maps/documentation/javascript/overview - 
+        and Styling Wizard - https://mapstyle.withgoogle.com/ -->
+
 
     <script>
       var labels = "123456789";
