--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <!-- Google Chart - Bar Chart - Start -->
 
+        <!-- Utilises Google chart tools - https://developers.google.com/chart/ -->
+
     <script
       type="text/javascript"
       src="https://www.gstatic.com/charts/loader.js"
@@ -95,6 +97,8 @@
 
     <!-- Google Chart - Timeline - Start -->
 
+        <!-- Utilises Google chart tools - https://developers.google.com/chart/ -->
+
     <script type="text/javascript">
       google.charts.load("current", { packages: ["timeline"] });
       google.charts.setOnLoadCallback(drawChart);
@@ -137,6 +141,9 @@
     <!-- Google Chart - Timeline - End -->
 
     <!-- Map Script and Formatting - Start -->
+    
+        <!-- Utilises Google Maps Javascript API - https://developers.google.com/maps/documentation/javascript/overview - 
+        and Styling Wizard - https://mapstyle.withgoogle.com/ -->
 
     <script>
       var labels = "123456789";
