Fix error - scripts heading

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </div>
     </footer>
 
-<!-------------------------------------------------------------------SCRIPTS -->
+<!-- SCRIPTS -->
 
     <!-- Bootstrap Scripts -->
 
