--- a/project1.html
+++ b/project1.html
@@ -382,7 +382,7 @@
       </div>
     </footer>
 
-<!-------------------------------------------------------------------SCRIPTS -->
+<!-- SCRIPTS -->
 
     <!-- Bootstrap Scripts -->
 
